--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li class="header-link"><a href="">Услуги</a></li>
                 <li class="header-link"><a href="">События</a></li>
                 <li class="header-link"><a href="">Проекты</a></li>
-                <li class="header-link"><a href="">Контакты</a></li>
+                <li class="header-link"><a href="contacts.html">Контакты</a></li>
               </ul>
             </div>
             <div class="header-right">
@@ -33,8 +33,8 @@
                 <button class="current-language-btn ru" id="currentLanguageBtn">ru</button>
                 <ul class="language-list" id="languageList">
                   <li><a class="language-li ru" href="#">ru</a></li>
-                  <li><a class="language-li eng" href="#">eng</a></li>
-                  <li><a class="language-li kg" href="#">kg</a></li>
+                  <li><a class="language-li eng" href="index.eng.html">eng</a></li>
+                  <li><a class="language-li kg" href="index.kg.html">kg</a></li>
                 </ul>
               </div>
             </div>
