request done and little bugs fixed

--- a/index.eng.html
+++ b/index.eng.html
@@ -24,7 +24,7 @@
               <li class="header-link"><a href="">Services</a></li>
               <li class="header-link"><a href="">Events</a></li>
               <li class="header-link"><a href="">Projects</a></li>
-              <li class="header-link"><a href="">Contacts</a></li>
+              <li class="header-link"><a href="contacts.eng.html">Contacts</a></li>
             </ul>
           </div>
           <div class="header-right">
