--- a/index.kg.html
+++ b/index.kg.html
@@ -24,7 +24,7 @@
               <li class="header-link"><a href="">Куралдар</a></li>
               <li class="header-link"><a href="">Окуялар</a></li>
               <li class="header-link"><a href="">Долбоорлор</a></li>
-              <li class="header-link"><a href="">Байланыш</a></li>
+              <li class="header-link"><a href="contacts.kg.html">Байланыш</a></li>
             </ul>
           </div>
           <div class="header-right">
