--- a/contacts.html
+++ b/contacts.html
@@ -14,12 +14,12 @@
   <header class="header" id="header">
     <div class="container">
       <div class="header-row">
-        <a href="" class="logo"><img src="images/logo.svg" alt=""></a>
+        <a href="index.html" class="logo"><img src="images/logo.svg" alt=""></a>
         <nav class="main-nav nav-hidden" id="mainNav">
           <div class="header-sides">
             <div class="header-left">
               <ul class="header-links">
-                <li class="header-link"><a href="index.html">VPS/Хостинг</a></li>
+                <li class="header-link"><a href="">VPS/Хостинг</a></li>
                 <li class="header-link"><a href="">Услуги</a></li>
                 <li class="header-link"><a href="">События</a></li>
                 <li class="header-link"><a href="">Проекты</a></li>
@@ -32,8 +32,8 @@
                 <button class="current-language-btn ru" id="currentLanguageBtn">ru</button>
                 <ul class="language-list" id="languageList">
                   <li><a class="language-li ru" href="#">ru</a></li>
-                  <li><a class="language-li eng" href="index.eng.html">eng</a></li>
-                  <li><a class="language-li kg" href="index.kg.html">kg</a></li>
+                  <li><a class="language-li eng" href="contacts.eng.html">eng</a></li>
+                  <li><a class="language-li kg" href="contacts.kg.html">kg</a></li>
                 </ul>
               </div>
             </div>
@@ -63,18 +63,23 @@
                   <a href="mailto:info@nsp.kg">e-mail: info@nsp.kg</a>
                 </div>
                 <div class="contacts-page-left-info-element contacts-page-left-info-element-3">
-                  <a href="">Кыргызская Республика, Чуй,<br>с. Лебединовка, Ленина 262</a>
+                  <a href="https://www.google.com/maps/place/Data+Center+NSP.+%D0%A6%D0%B5%D0%BD%D1%82%D1%80+%D0%9E%D0%B1%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B8+%D0%94%D0%B0%D0%BD%D0%BD%D1%8B%D1%85+NSP/@42.8832678,74.6716099,18.92z/data=!4m6!3m5!1s0x389eb775c177ace3:0x90ffa5ee7e359508!8m2!3d42.8832916!4d74.6714127!16s%2Fg%2F11j2xbvmzr?entry=tts&shorturl=1">Кыргызская Республика, Чуй,<br>с. Лебединовка, Ленина 262</a>
                 </div>
               </div>
             </div>
             <div class="contacts-page-right">
-              <p>Ваше имя:</p>
-              <input type="text" name="">
-              <p>E-mail:</p>
-              <input type="text" name="">
-              <p>Введите ваше сообщение:</p>
-              <textarea name="" id="" cols="20" rows="10" ></textarea>
-              <button>Отправить</button>
+              <div class="request-has-been-sent">Ваш запрос отправлен!</div>
+              <form action="" id="request-form">
+                <p>Ваше имя:</p>
+                <input type="text" name="name">
+                <p>E-mail:</p>
+                <input type="text" name="email">
+                <p>Введите ваше сообщение:</p>
+                <textarea name="message" id="" cols="20" rows="10" ></textarea>
+                <input style="display:none;" type="text" name="lng" value="Язык сайта во время отправки сообщения: Русский">
+
+                <button type="submit">Отправить</button>
+              </form>
             </div>
           </div>
         </div>
@@ -83,5 +88,7 @@
   </main>
   <script src="js/language.js"></script>
   <script src="js/nav.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="js/request.js"></script>
 </body>
 </html>
