coordinates page done

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               </ul>
             </div>
             <div class="header-right">
-              <a href="https://goo.gl/maps/RWhZXhKsaEvzUq3aA" class="header-gps" target="_blank">Наши координаты</a>
+              <a href="coordinates.html" class="header-gps">Наши координаты</a>
               <div class="header-language-dropdown">
                 <button class="current-language-btn ru" id="currentLanguageBtn">ru</button>
                 <ul class="language-list" id="languageList">
