--- a/index.kg.html
+++ b/index.kg.html
@@ -28,7 +28,7 @@
             </ul>
           </div>
           <div class="header-right">
-            <a href="https://goo.gl/maps/RWhZXhKsaEvzUq3aA" class="header-gps" target="_blank">Биздин координаттар</a>
+            <a href="coordinates.kg.html" class="header-gps">Биздин координаттар</a>
             <div class="header-language-dropdown">
               <button class="current-language-btn kg" id="currentLanguageBtn">kg</button>
               <ul class="language-list" id="languageList">
