--- a/contacts.eng.html
+++ b/contacts.eng.html
@@ -27,7 +27,7 @@
             </ul>
           </div>
           <div class="header-right">
-            <a href="https://goo.gl/maps/RWhZXhKsaEvzUq3aA" class="header-gps" target="_blank">Our coordinates</a>
+            <a href="coordinates.eng.html" class="header-gps">Our coordinates</a>
             <div class="header-language-dropdown">
               <button class="current-language-btn eng" id="currentLanguageBtn">eng</button>
               <ul class="language-list" id="languageList">
@@ -74,7 +74,7 @@
               <p>Your name:</p>
               <input type="text" name="name">
               <p>E-mail:</p>
-              <input type="text" name="email">
+              <input type="email" name="email">
               <p>Enter your message:</p>
               <textarea name="message" cols="20" rows="10" ></textarea>
               <input style="display:none;" type="text" name="lng" value="Язык сайта во время отправки сообщения: Английский">
