--- a/index.eng.html
+++ b/index.eng.html
@@ -28,7 +28,7 @@
             </ul>
           </div>
           <div class="header-right">
-            <a href="https://goo.gl/maps/RWhZXhKsaEvzUq3aA" class="header-gps" target="_blank">Our coordinates</a>
+            <a href="coordinates.eng.html" class="header-gps">Our coordinates</a>
             <div class="header-language-dropdown">
               <button class="current-language-btn eng" id="currentLanguageBtn">eng</button>
               <ul class="language-list" id="languageList">
