about us page is done

--- a/contacts.html
+++ b/contacts.html
@@ -11,39 +11,39 @@
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-  <header class="header" id="header">
-    <div class="container">
-      <div class="header-row">
-        <a href="index.html" class="logo"><img src="images/logo.svg" alt=""></a>
-        <nav class="main-nav nav-hidden" id="mainNav">
-          <div class="header-sides">
-            <div class="header-left">
-              <ul class="header-links">
-                <li class="header-link"><a href="">VPS/Хостинг</a></li>
-                <li class="header-link"><a href="">Услуги</a></li>
-                <li class="header-link"><a href="">События</a></li>
-                <li class="header-link"><a href="">Проекты</a></li>
-                <li class="header-link"><a href="">Контакты</a></li>
+<header class="header" id="header">
+  <div class="container">
+    <div class="header-row">
+      <a href="index.html" class="logo"><img src="images/logo.svg" alt=""></a>
+      <nav class="main-nav nav-hidden" id="mainNav">
+        <div class="header-sides">
+          <div class="header-left">
+            <ul class="header-links">
+              <li class="header-link"><a href="">VPS/Хостинг</a></li>
+              <li class="header-link"><a href="">Услуги</a></li>
+              <li class="header-link"><a href="">События</a></li>
+              <li class="header-link"><a href="">Проекты</a></li>
+              <li class="header-link"><a href="contacts.html">Контакты</a></li>
+            </ul>
+          </div>
+          <div class="header-right">
+            <a href="#" class="header-gps">Наши координаты</a>
+            <div class="header-language-dropdown">
+              <button class="current-language-btn ru" id="currentLanguageBtn">ru</button>
+              <ul class="language-list" id="languageList">
+                <li><a class="language-li ru" href="#">ru</a></li>
+                <li><a class="language-li eng" href="coordinates.eng.html">eng</a></li>
+                <li><a class="language-li kg" href="coordinates.kg.html">kg</a></li>
               </ul>
             </div>
-            <div class="header-right">
-              <a href="coordinates.html" class="header-gps">Наши координаты</a>
-              <div class="header-language-dropdown">
-                <button class="current-language-btn ru" id="currentLanguageBtn">ru</button>
-                <ul class="language-list" id="languageList">
-                  <li><a class="language-li ru" href="#">ru</a></li>
-                  <li><a class="language-li eng" href="contacts.eng.html">eng</a></li>
-                  <li><a class="language-li kg" href="contacts.kg.html">kg</a></li>
-                </ul>
-              </div>
-            </div>
           </div>
-        </nav>
-        <button class="nav-btn" type="button" id="navBtn">
-        </button>
-      </div>
+        </div>
+      </nav>
+      <button class="nav-btn" type="button" id="navBtn">
+      </button>
     </div>
-  </header>
+  </div>
+</header>
   <main>
     <section class="contacts-page">
       <div class="container">
