--- a/index.eng.html
+++ b/index.eng.html
@@ -59,7 +59,7 @@
         </div>
         <div class="hero-right">
           <p>is a market leader in IT, complex system integration, uninterruptable power supply systems and consulting. NSP engineers succeeded in gaining required knowledge and skills at the factory based training centers of the producers in Moscow, Almaty, France, Belgium, Germany. Our engineers are thoroughly certified by the producers. Therefore, NSP company is fully authorized to promote and service such brands as: АРС - a champion among producers of UPSs (Uninterruptable Power Supply); SDMO - diesel, gasoline and gas fueled electric generating sets; Fujitsu - computers and servers, storages, virtualization solutions; CISCO - network solutions, and many other world known brands.</p>
-          <a href="#">About company</a>
+          <a href="about-us.eng.html">About company</a>
         </div>
       </div>
     </div>
@@ -72,7 +72,7 @@
         </div>
         <div class="about-us-right">
           <p>is a market leader in IT, complex system integration, uninterruptable power supply systems and consulting. NSP engineers succeeded in gaining required knowledge and skills at the factory based training centers of the producers in Moscow, Almaty, France, Belgium, Germany. Our engineers are thoroughly certified by the producers. Therefore, NSP company is fully authorized to promote and service such brands as: АРС - a champion among producers of UPSs (Uninterruptable Power Supply); SDMO - diesel, gasoline and gas fueled electric generating sets; Fujitsu - computers and servers, storages, virtualization solutions; CISCO - network solutions, and many other world known brands.</p>
-          <a href="#">About company</a>
+          <a href="about-us.eng.html">About company</a>
 
         </div>
       </div>
