--- a/index.kg.html
+++ b/index.kg.html
@@ -59,7 +59,7 @@
         </div>
         <div class="hero-right">
           <p>Маалыматтык технологиялар, системалык интеграциялануу, кепилденген энергия менен камсыздоо жана консалтинг тармактарындагы лидер. Компаниянын инженерлери тереңдетилген окутуудан өндүрүүчүлөр заводдорунан жана Москва, Алматы, Франция, Бельгия, Греманиянын дистрибьютордук платформаларында өтүшкөн жана тиешелүү сертификаттарга ээ. Компания дүйнөнүн алдыңкы өндүрүүчүлөрү болушкан: АРС – үзгүлтүксүз азыктандыруу булактарын өндүрүүчүлөр арасындагы чемпиону; SDMO - дизель жана бензин генератордук түзүлүштөрү; Fujitsu – компьютердик жана сервердик жабдуу, СХД, виртуалдаштыруу боюнча чечим; CISCO – түйүндүк жабдуу сыяктуу өндүрүүчүлөрдүн продукциясын сунуштап жана тейлептурууга авторизацияланган.</p>
-          <a href="#">Компания жөнүндө</a>
+          <a href="about-us.kg.html">Компания жөнүндө</a>
         </div>
       </div>
     </div>
@@ -72,8 +72,7 @@
         </div>
         <div class="about-us-right">
           <p>Маалыматтык технологиялар, системалык интеграциялануу, кепилденген энергия менен камсыздоо жана консалтинг тармактарындагы лидер. Компаниянын инженерлери тереңдетилген окутуудан өндүрүүчүлөр заводдорунан жана Москва, Алматы, Франция, Бельгия, Греманиянын дистрибьютордук платформаларында өтүшкөн жана тиешелүү сертификаттарга ээ. Компания дүйнөнүн алдыңкы өндүрүүчүлөрү болушкан: АРС – үзгүлтүксүз азыктандыруу булактарын өндүрүүчүлөр арасындагы чемпиону; SDMO - дизель жана бензин генератордук түзүлүштөрү; Fujitsu – компьютердик жана сервердик жабдуу, СХД, виртуалдаштыруу боюнча чечим; CISCO – түйүндүк жабдуу сыяктуу өндүрүүчүлөрдүн продукциясын сунуштап жана тейлептурууга авторизацияланган.</p>
-          <a href="#">Компания жөнүндө</a>
-
+          <a href="about-us.html">Компания жөнүндө</a>
         </div>
       </div>
     </div>
