--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </div>
           <div class="hero-right">
             <p>Лидер в области информационных технологий, системной интеграции, системы гарантированного энергообеспечения и консалтинга. Инженеры компании прошли углубленное обучение на заводах производителей и дистрибьюторских платформах в Москве, Алматы, Франции, Бельгии, Германии и имеют соответствующие сертификаты. Компания авторизована представлять и обслуживать продукцию таких ведущих мировых производителей как: АРС - чемпион среди производителей источников бесперебойного питания; SDMO - дизельные и бензиновые генераторные установки; Fujitsu - компьютерное и серверное оборудование, СХД, решения по виртуализации; CISCO - сетевое оборудование ...</p>
-            <a href="#">О компании</a>
+            <a href="about-us.html">О компании</a>
           </div>
         </div>
       </div>
@@ -72,7 +72,7 @@
           </div>
           <div class="about-us-right">
             <p>Лидер в области информационных технологий, системной интеграции, системы гарантированного энергообеспечения и консалтинга. Инженеры компании прошли углубленное обучение на заводах производителей и дистрибьюторских платформах в Москве, Алматы, Франции, Бельгии, Германии и имеют соответствующие сертификаты. Компания авторизована представлять и обслуживать продукцию таких ведущих мировых производителей как: АРС - чемпион среди производителей источников бесперебойного питания; SDMO - дизельные и бензиновые генераторные установки; Fujitsu - компьютерное и серверное оборудование, СХД, решения по виртуализации; CISCO - сетевое оборудование ...</p>
-            <a href="#">О компании</a>
+            <a href="about-us.html">О компании</a>
 
           </div>
         </div>
