admin panel + projects page

--- a/about-us.kg.html
+++ b/about-us.kg.html
@@ -19,10 +19,10 @@
         <div class="header-sides">
           <div class="header-left">
             <ul class="header-links">
-              <li class="header-link"><a href="">VPS/Хостинг</a></li>
-              <li class="header-link"><a href="">Куралдар</a></li>
-              <li class="header-link"><a href="">Окуялар</a></li>
-              <li class="header-link"><a href="">Долбоорлор</a></li>
+              <li class="header-link"><a href="hosting.kg.html">VPS/Хостинг</a></li>
+              <li class="header-link"><a href="services.kg.html">Куралдар</a></li>
+              <li class="header-link"><a href="events.kg.html">Окуялар</a></li>
+              <li class="header-link"><a href="projects.kg.html">Долбоорлор</a></li>
               <li class="header-link"><a href="contacts.kg.html">Байланыш</a></li>
             </ul>
           </div>
