--- a/contacts.eng.html
+++ b/contacts.eng.html
@@ -19,11 +19,11 @@
         <div class="header-sides">
           <div class="header-left">
             <ul class="header-links">
-              <li class="header-link"><a href="">VPS/Hosting</a></li>
-              <li class="header-link"><a href="">Services</a></li>
-              <li class="header-link"><a href="">Events</a></li>
-              <li class="header-link"><a href="">Projects</a></li>
-              <li class="header-link"><a href="">Contacts</a></li>
+              <li class="header-link"><a href="hosting.eng.html">VPS/Hosting</a></li>
+              <li class="header-link"><a href="services.eng.html">Services</a></li>
+              <li class="header-link"><a href="events.eng.html">Events</a></li>
+              <li class="header-link"><a href="projects.eng.html">Projects</a></li>
+              <li class="header-link"><a href="contacts.eng.html">Contacts</a></li>
             </ul>
           </div>
           <div class="header-right">
