--- a/contacts.html
+++ b/contacts.html
@@ -19,15 +19,15 @@
         <div class="header-sides">
           <div class="header-left">
             <ul class="header-links">
-              <li class="header-link"><a href="">VPS/Хостинг</a></li>
-              <li class="header-link"><a href="">Услуги</a></li>
-              <li class="header-link"><a href="">События</a></li>
-              <li class="header-link"><a href="">Проекты</a></li>
+              <li class="header-link"><a href="hosting.html">VPS/Хостинг</a></li>
+              <li class="header-link"><a href="services.html">Услуги</a></li>
+              <li class="header-link"><a href="events.html">События</a></li>
+              <li class="header-link"><a href="projects.html">Проекты</a></li>
               <li class="header-link"><a href="contacts.html">Контакты</a></li>
             </ul>
           </div>
           <div class="header-right">
-            <a href="#" class="header-gps">Наши координаты</a>
+            <a href="coordinates.html" class="header-gps">Наши координаты</a>
             <div class="header-language-dropdown">
               <button class="current-language-btn ru" id="currentLanguageBtn">ru</button>
               <ul class="language-list" id="languageList">
