--- a/about-us.html
+++ b/about-us.html
@@ -19,10 +19,10 @@
                     <div class="header-sides">
                         <div class="header-left">
                             <ul class="header-links">
-                                <li class="header-link"><a href="">VPS/Хостинг</a></li>
-                                <li class="header-link"><a href="">Услуги</a></li>
-                                <li class="header-link"><a href="">События</a></li>
-                                <li class="header-link"><a href="">Проекты</a></li>
+                                <li class="header-link"><a href="hosting.html">VPS/Хостинг</a></li>
+                                <li class="header-link"><a href="services.html">Услуги</a></li>
+                                <li class="header-link"><a href="events.html">События</a></li>
+                                <li class="header-link"><a href="projects.html">Проекты</a></li>
                                 <li class="header-link"><a href="contacts.html">Контакты</a></li>
                             </ul>
                         </div>
