--- a/coordinates.html
+++ b/coordinates.html
@@ -19,10 +19,10 @@
           <div class="header-sides">
             <div class="header-left">
               <ul class="header-links">
-                <li class="header-link"><a href="">VPS/Хостинг</a></li>
-                <li class="header-link"><a href="">Услуги</a></li>
-                <li class="header-link"><a href="">События</a></li>
-                <li class="header-link"><a href="">Проекты</a></li>
+                <li class="header-link"><a href="hosting.html">VPS/Хостинг</a></li>
+                <li class="header-link"><a href="services.html">Услуги</a></li>
+                <li class="header-link"><a href="events.html">События</a></li>
+                <li class="header-link"><a href="projects.html">Проекты</a></li>
                 <li class="header-link"><a href="contacts.html">Контакты</a></li>
               </ul>
             </div>
@@ -54,7 +54,7 @@
           <div class="coordinate-box">
             <h4 class="coordinate-address">наш адрес</h4>
             <div class="coordinate-links">
-              <a href="#">
+              <a href="https://www.google.com/maps/place/Data+Center+NSP.+%D0%A6%D0%B5%D0%BD%D1%82%D1%80+%D0%9E%D0%B1%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B8+%D0%94%D0%B0%D0%BD%D0%BD%D1%8B%D1%85+NSP/@42.8832678,74.6716099,18.92z/data=!4m6!3m5!1s0x389eb775c177ace3:0x90ffa5ee7e359508!8m2!3d42.8832916!4d74.6714127!16s%2Fg%2F11j2xbvmzr?entry=tts&shorturl=1">
                 Кыргызская Республика, Чуй,<br>с. Лебединовка, Ленина 262
               </a>
             </div>
@@ -63,11 +63,11 @@
           <div class="coordinate-box">
             <h4 class="coordinate-phone">наш телефон</h4>
             <div class="coordinate-links">
-              <a href="#">
+              <a href="tel:996312976158">
                 +996 (312) 976-158
               </a>
               <br>
-              <a href="#">
+              <a href="tel:996312976958">
                 факс: +996(312)976-958
               </a>
             </div>
@@ -76,7 +76,7 @@
           <div class="coordinate-box">
             <h4 class="coordinate-email">наша почта</h4>
             <div class="coordinate-links">
-              <a href="#">
+              <a href="mailto:info@nsp.kg">
                 e-mail: info@nsp.kg
               </a>
             </div>
