--- a/hosting.html
+++ b/hosting.html
@@ -2,9 +2,124 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Компания NSP</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@100;300;400;500&family=Montserrat:wght@300;400;500;700&family=Noto+Serif&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-
+<header class="header" id="header">
+  <div class="container">
+    <div class="header-row">
+      <a href="index.html" class="logo"><img src="images/logo.svg" alt=""></a>
+      <nav class="main-nav nav-hidden" id="mainNav">
+        <div class="header-sides">
+          <div class="header-left">
+            <ul class="header-links">
+              <li class="header-link"><a href="hosting.html">VPS/Хостинг</a></li>
+              <li class="header-link"><a href="services.html">Услуги</a></li>
+              <li class="header-link"><a href="events.html">События</a></li>
+              <li class="header-link"><a href="projects.html">Проекты</a></li>
+              <li class="header-link"><a href="contacts.html">Контакты</a></li>
+            </ul>
+          </div>
+          <div class="header-right">
+            <a href="coordinates.html" class="header-gps">Наши координаты</a>
+            <div class="header-language-dropdown">
+              <button class="current-language-btn ru" id="currentLanguageBtn">ru</button>
+              <ul class="language-list" id="languageList">
+                <li><a class="language-li ru" href="#">ru</a></li>
+                <li><a class="language-li eng" href="hosting.eng.html">eng</a></li>
+                <li><a class="language-li kg" href="hosting.kg.html">kg</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </nav>
+      <button class="nav-btn" type="button" id="navBtn">
+      </button>
+    </div>
+  </div>
+</header>
+<main>
+  <section class="instructions">
+    <div class="container">
+      <h3>Пошаговая инструкция заказа:</h3>
+      <div class="instructions-boxes">
+        <div class="instructions-box">
+          <p>
+            Выберите наболее подходящий тариф и нажмите кнопку "Заказать".
+          </p>
+        </div>
+        <div class="instructions-box">
+          <p>
+            Вы будете перенаправлены в биллинг для осуществления безопасной оплаты
+          </p>
+        </div>
+        <div class="instructions-box">
+          <p>
+            Совершив оплату, вы получите на почту письмо с данными для доступа к услуге.
+          </p>
+        </div>
+      </div>  
+    </div>
+  </section>
+  <hr style="height: 1px; background-color:#A8A8A8;">
+  <section class="quality">
+    <div class="container">
+      <div class="quality-sides">
+        <div class="quality-left">
+          <img src="images/Rectangle%20538.jpg" alt="">
+        </div>
+        <div class="quality-right">
+          <h4>Высокое качество и<br>современное оборудование.</h4>
+          <p>Ваш проект будет работать всегда стабильно благодаря высокому уровню качества нашего сервиса и самому соверменному оборудованию расположенного в надежном дата-центре.</p>
+        </div>
+      </div>
+      <div class="visit">
+        <h5>Приходите к нам в офис</h5>
+        <a href="https://www.google.com/maps/place/Data+Center+NSP.+%D0%A6%D0%B5%D0%BD%D1%82%D1%80+%D0%9E%D0%B1%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B8+%D0%94%D0%B0%D0%BD%D0%BD%D1%8B%D1%85+NSP/@42.8832678,74.6716099,18.92z/data=!4m6!3m5!1s0x389eb775c177ace3:0x90ffa5ee7e359508!8m2!3d42.8832916!4d74.6714127!16s%2Fg%2F11j2xbvmzr?entry=tts&shorturl=1">Кыргызская Республика, Чуй, с. Лебединовка, Ленина 262</a>
+      </div>
+    </div>
+  </section>
+  <section class="staff">
+    <div class="container">
+      <div class="staff-sides">
+        <div class="staff-left">
+          <img src="images/beautiful-smiling-woman-looking-friendly-ready-help-customer-client-holding-hands-together-staring-camera-white-background%201.png" alt="">
+        </div>
+        <div class="staff-right">
+          <div class="staff-logo">
+            <img src="images/logo-black.svg" alt="">
+            <div class="staff-slogan">
+              <span>network</span>
+              <span>servers</span>
+              <span>power</span>
+            </div>
+          </div>
+          <h3>Квалифицированный персонал</h3>
+          <p>Быстро получите ответ на любой ваш вопрос от квалифицированных системых администраторов.</p>
+          <a href="contacts.html">Написать</a>
+        </div>
+      </div>
+    </div>
+  </section>
+</main>
+<footer class="footer">
+  <div class="container">
+    <button class="btn-to-top"><img src="images/Group%2022.svg" alt=""></button>
+    <p>Copyright © 2008-2021 ОсОО "NSP"</p>
+  </div>
+</footer>
+<script>
+  document.querySelector(".btn-to-top").addEventListener('click', () => {
+    window.scrollTo({top: 0, behavior: 'smooth'});
+  })
+</script>
+<script src="js/language.js"></script>
+<script src="js/nav.js"></script>
 </body>
 </html>
